--- a/.github/workflow/docker-build.yml
+++ b/.github/workflow/docker-build.yml
@@ -42,7 +42,7 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64
           push: true
-          tags: {{ YOUR_DOCKERHUB_REPOSITORY }}/python-helloworld:latest
+          tags: {{ secrets.DOCKERHUB_USERNAME }}/python-helloworld:latest
 
 
 
